Fixed: minor broken styles

--- a/client/src/styles/_base.styl
+++ b/client/src/styles/_base.styl
@@ -17,6 +17,9 @@ yellow = #FFDC00
     src url('../fonts/fontawesome-webfont.ttf')
 
 
+*
+    box-sizing border-box
+
 html
 body
     height 100%
