--- a/client/src/styles/_menu.styl
+++ b/client/src/styles/_menu.styl
@@ -4,7 +4,6 @@
   background #F2F2F2
   height 100%
   position fixed
-  overflow auto
   z-index 100
 
   .fa-arrow-left
